--- a/vue1/list-rendering-4.html
+++ b/vue1/list-rendering-4.html
@@ -11,32 +11,16 @@
     <div class="container py-5" id="app">
         <h2>Top 10 Frameworks</h2>
         <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-                ASP.NET
-                <span class="badge badge-primary badge-pill">100</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-                AngularJs
-                <span class="badge badge-primary badge-pill">100</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-                Ruby on Rails
-                <span class="badge badge-primary badge-pill">100</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-                React
-                <span class="badge badge-primary badge-pill">100</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-                ...
-                <span class="badge badge-primary badge-pill">100</span>
+            <li  v-for="(score, framework, index) of topTenFrameworks" class="list-group-item d-flex justify-content-between align-items-center">
+                {{ (index+1) + '. ' + framework }}
+                <span class="badge badge-primary badge-pill">{{ score }}</span>
             </li>
         </ul>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script>
-    new Vue({    
+    new Vue({
         el: '#app',
         data: {
             topTenFrameworks: {
