--- a/vue1/list-rendering-5.html
+++ b/vue1/list-rendering-5.html
@@ -17,28 +17,23 @@
                 <th>Stack Overflow Score</th>
                 <th>Overall Score</th>
             </tr>
-            <tr>
-                <td>ASP.NET</td>
-                <td></td>
-                <td>100</td>
-                <td>100</td>
+            <tr v-for="framework of topTenFrameworks">
+                <td>{{ framework.name }}</td>
+                <td>{{ framework.github }}</td>
+                <td>{{ framework.stackoverflow }}</td>
+                <td>{{ framework.overall }}</td>
             </tr>
-            <tr>
-                <td>AngularJs</td>
-                <td>96</td>
-                <td>97</td>
-                <td>96</td>
-            </tr>
+
         </table>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script>
-    new Vue({    
+    new Vue({
         el: '#app',
         data: {
             topTenFrameworks: [
-                { name: "ASP.NET", github: null, stackoverflow: 100, overall: 100 },
+                //{ name: "ASP.NET", github: null, stackoverflow: 100, overall: 100 },
                 { name: "AngularJS", github: 96, stackoverflow: 97, overall: 96 },
                 { name: "Ruby on Rails", github: 92, stackoverflow: 98, overall: 95 },
                 { name: "ASP NET", github: null, stackoverflow: 94, overall: 94 },
@@ -48,7 +43,7 @@
                 { name: "Laravel", github: 91, stackoverflow: 88, overall: 89 },
                 { name: "Spring", github: 84, stackoverflow: 92, overall: 88 },
                 { name: "Express", github: 91, stackoverflow: 83, overall: 87 }
-            ]        
+            ]
         }
     })
     </script>
