--- a/vue2/conditional-rendering-2.html
+++ b/vue2/conditional-rendering-2.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>List Rendering</title>
+    <title>Conditional Rendering</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 </head>
 <body>
     <div class="container py-5" id="app">
-        <ul class="list-group">
-            <li class="list-group-item" v-for="n in 5">{{ 'List222 ' + n }}</li>
-        </ul>
+        <div v-if="!records.length" class="alert alert-warning">
+            You have no any records
+        </div>
+        <div class="alert alert-success">
+            You have some records
+        </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script>
-      new Vue({
-        el: '#app'
-      });
+    new Vue({
+        el: '#app',
+        data: {
+            records: []
+        }
+    })
     </script>
 </body>
 </html>
