lesson2 to lesson4

--- a/vue2/conditional-rendering-1.html
+++ b/vue2/conditional-rendering-1.html
@@ -9,16 +9,20 @@
 </head>
 <body>
     <div class="container py-5" id="app">
-        <div class="alert alert-warning">
+        <div v-if="!records.length && showAlert" class="alert alert-warning">
             You have no any records
         </div>
-        <button class="btn btn-primary">Hide Message</button>
+        <button v-on:click="showAlert = false" class="btn btn-primary">Hide Message</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script>
     new Vue({
-        el: '#app'        
+        el: '#app',
+        data: {
+          showAlert: true,
+          records: []
+        }
     })
     </script>
 </body>
