--- a/vue4/class-bindings-1.html
+++ b/vue4/class-bindings-1.html
@@ -16,8 +16,9 @@
 <body>
     <div class="container py-5" id="app">
         <div id="box" class="row"
-            :class="{ 'bg-info': !hovered, 'bg-primary': hovered }"
-            @mouseover="hovered = true" @mouseout="hovered = false">
+          :class="{ 'bg-info': !hovered, 'bg-primary': hovered }"
+          @mouseover="hovered = true"
+          @mouseout="hovered = false">
            <div class="col my-auto text-center text-light">
              Mouse over here
            </div>
