--- a/vue4/class-bindings-2.html
+++ b/vue4/class-bindings-2.html
@@ -16,8 +16,9 @@
 <body>
     <div class="container py-5" id="app">
         <div id="box" class="row"
-            :class="[ hovered ? 'bg-primary' : 'bg-info' ]"
-            @mouseover="hovered = true" @mouseout="hovered = false">
+            :class="[ hovered ? 'bg-primary':'bg-info' ]"
+            @mouseover="hovered = true"
+            @mouseout="hovered = false">
            <div class="col my-auto text-center text-light">
              Mouse over here
            </div>
@@ -29,7 +30,7 @@
     new Vue({
         el: '#app',
         data: {
-            hovered: false
+          hovered: false
         }
     })
     </script>
