--- a/vue4/style-binding-4.html
+++ b/vue4/style-binding-4.html
@@ -10,8 +10,10 @@
 <body>
     <div class="container py-5" id="app">
         <div class="progress">
-          <div class="progress-bar" role="progressbar" :style="{ 'width': width + '%' }" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-              {{ width }}%
+          <div class="progress-bar" role="progressbar"
+          :style="{ 'width': width + '%' }"
+          style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+              {{ width }} %
           </div>
         </div>
         <br>
@@ -23,7 +25,7 @@
     new Vue({
         el: '#app',
         data: {
-            width: 0
+          width: 0
         }
     })
     </script>
